--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Zadanie 12.5</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -21,11 +20,12 @@
         </div>
         <div>
             <button class="trigger">Random quote</button>
-            <a href="#" target="_blank" class="tweet"><i class="fa fa-lg fa-twitter"></i> Tweet</a>
+            <a href="#" target="_blank" class="tweet"><span class="fa fa-lg fa-twitter"></span>Tweet</a>
         </div>
     </main>
 
     <script type="text/javascript" src="scripts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 
 </html>
