--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Zadanie 12.5</title>
+    <title>Random Quote Machine</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -25,7 +26,6 @@
     </main>
 
     <script type="text/javascript" src="scripts.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </body>
 
 </html>
