--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         </div>
         <div>
             <button class="trigger">Random quote</button>
-            <a href="#" target="_blank" class="tweet"><span class="fa fa-lg fa-twitter"></span>Tweet</a>
+            <a href="#" target="_blank" class="tweet"><span class="fa fa-twitter"></span>Tweet</a>
         </div>
     </main>
+    
 
     <script type="text/javascript" src="scripts.js"></script>
 </body>
